--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StakeBonuses - Calculate Your Stake Bonus</title>
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Use the StakeBonuses calculator to estimate your Stake VIP bonus. Calculate weekly, monthly, pre-monthly, and post-monthly bonuses with our easy-to-use tool." />
-    <meta name="keywords" content="Stake bonus calculator, Stake VIP bonus, weekly bonus, monthly bonus, pre-monthly bonus, post-monthly bonus, calculate Stake bonus" />
-    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Google AdSense Verification -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1244481348220541"
+     crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div id="root"></div>
